# WhackAGoon

./: .gitignore  CMakeLists.txt  WhackAGoon.cbp  WhackAGoon.depend  WhackAGoon.layout  _compile.bat  build.bat  compile.bat
reworkassets/: cityhall concept.aseprite  newHolesheet.ase  people.ase
source/: Scenes.cpp  Scenes.h  ZRect.cpp  ZRect.h  assets.h  entities.cpp  entities.h  frames.cpp  frames.h  game_textures.h  main.cpp  metadata.h  scenes.cpp  scenes.h  sprites.cpp  sprites.cpp.save-failed  sprites.h  utils.cpp  utils.h  widgets.cpp  widgets.h
src/: _compile.bat  compile.bat  g_data.h  helpers.cpp  helpers.h  main.cpp  managers.cpp  managers.h  orig_main.cpp  renderdata.h  scenes.cpp  scenes.h  sprites.cpp  sprites.h  test.cpp  widgets.cpp  widgets.h  workspace.code-workspace
src/internal/: assets.h  scenes.cpp  scenes.h  utils.cpp  widgets.h
whackagoon-rewritten/: compile.bat  g_data.h  g_texture.cpp  g_texture.h  helpers.cpp  main.cpp  scenes.cpp  scenes.h  sprites.cpp  sprites.h  widgets.cpp  widgets.h
